contact form confirmation color changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ HEADER
 				<div class="mt-3"><img src="assets/img/header-banner.jpg" alt="Chef Master" class="img-responsive"></div>
 				<div class="bg-sky-blue p-5">
 					<h2 class="text-white text-center font-weight-bold">Welcome To Uniforms Unlimited</h2>
-					<p class="lead text-white text-left">Uniforms Unlimited is recognized as a leading provider of finest Corporate Apparel in India for 5 Star Hotels, Airlines, Schools, Hospitals and Corporates. Uniforms Unlimited offers exceptional customer service, innovative styles and products that are unmatched in comfort & durability. Uniforms Unlimited with its brand “Dezenzia”, has developed unparalleled standards in the art of designing durable and elegant uniforms. Uniforms Unlimited is also renowned for a wide range of ChefWear with customized embroidery and its brand “Chefs Unlimited” is now being considered the ultimate ChefWear in India.</p>
+					<p class="lead text-white text-justify">Uniforms Unlimited is recognized as a leading provider of finest Corporate Apparel in India for 5 Star Hotels, Airlines, Schools, Hospitals and Corporates. Uniforms Unlimited offers exceptional customer service, innovative styles and products that are unmatched in comfort & durability. Uniforms Unlimited with its brand “Dezenzia”, has developed unparalleled standards in the art of designing durable and elegant uniforms. Uniforms Unlimited is also renowned for a wide range of ChefWear with customized embroidery and its brand “Chefs Unlimited” is now being considered the ultimate ChefWear in India.</p>
 				</div>
 			</div>
 		</div>
@@ -121,7 +121,7 @@ HEADER
 		<div class="row">
 			<div class="col-md-12">
 			<h3 class="text-center text-white font-weight-bold"><span class="text-clay">Send Your Details</span></h3>
-			<h3 class="mb-4 text-center text-white font-weight-bold">Get More Infor About Product</h3>
+			<h3 class="mb-4 text-center text-white font-weight-bold">Get More Info About Product</h3>
 		</div>
 		</div>
 		<div class="row">
@@ -149,7 +149,7 @@ HEADER
 						            </div> -->
 
 						            <button type="submit" id="form-submit" class="btn btn-blue btn-round btn-block shadow-sm text-white font-weight-bold text-uppercase">Send Details</button>
-													<div id="msgSubmit" class="h3 text-center bg-success d-none text-white">We have received your message, we will get back to you shortly!</div>
+													<div id="msgSubmit" class="h3 text-center bg-success d-none text-black">We have received your message, we will get back to you shortly!</div>
 						          </form>
 				</div>
 			</div>
